# kubectl-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: debug.md  health.md  pods.md  security.md
.claude/skills/kubectl-ai/: SKILL.md
docs/: ARCHITECTURE.md  CODE_WALKTHROUGH.md  EIAMCLI_INTEGRATION.md  FEATURES.md  MCP_SETUP.md  QUICK_REFERENCE.md  SLACK_INTEGRATION.md  STEP_BY_STEP_GUIDE.md
scripts/: setup-mcp.sh
src/: __init__.py  main.py  mcp_server.py  slack_bot.py
src/agent/: __init__.py  core.py  memory.py  prompts.py  tools.py
src/k8s/: __init__.py  contexts.py  executor.py  health.py  parser.py  validators.py
src/llm/: __init__.py  anthropic_provider.py  ollama_provider.py  providers.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_agent.py  test_executor.py  test_validators.py
